2009-04-22  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.h
	* src/protocol.c
	(+parse_old_track_parts, +parse_new_track_parts)
	(lastfm_parse_track, lastfm_parse_playlist)
	(lastfm_request_playlist, lastfm_request_custom_playlist):
	Add support for the new Last.fm playlist format.

2009-04-22  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.c
	* src/util.h
	* src/util.c (get_language_code):
	Moved from protocol.c to util.c

2009-04-20  Alberto Garcia  <agarcia@igalia.com>

	* src/lastfm-ws.c (lastfm_ws_get_track_tags)
	(+lastfm_ws_old_get_album_tags):
	Get album tags using the old Last.fm API, as the new one seems to
	return less results.

	* src/uimisc.c (get_track_tags_thread):
	Use the v2.0 Last.fm API to get track tags.

	* src/Makefile.am
	* src/metadata.[ch]:
	Remove implementation of v1.0 Last.fm API as it's not being used
	anymore.

2009-04-20  Alberto Garcia  <agarcia@igalia.com>

	* src/uimisc.h
	* src/uimisc.c
	(tagwin_run, get_track_tags_thread, tagwin_destroy):
	Use the Last.fm Web Services API v2.0 to obtain tags set by the
	user.

	* src/controller.c
	(controller_tag_track):
	Pass the LastfmWsSession object to tagwin_run().

	* src/metadata.h
	* src/metadata.c:
	Disable deprecated function lastfm_get_user_track_tags() in favour
	of lastfm_ws_get_user_track_tags()

2009-04-20  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (controller_run_app, controller_disconnect)
	(check_session, create_ws_session):
	Create a LastfmWsSession to use the Last.fm Web Services.

2009-04-20  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(check_usercfg):
	Don't send the usercfg-changed signal if the configuration hasn't
	changed.
	(controller_run_app):
	Make sure that rsp_init() is called before loading the user
	config.

2009-04-20  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	* src/metadata.[ch]
	* src/util.[ch]
	* src/vgl-tray-icon.c:
	Move lastfm_get_track_cover_image() from metadata.c to util.c
